navbar correctamente creadas

--- a/Desafio_Jawas/frontend/html/componentes.html
+++ b/Desafio_Jawas/frontend/html/componentes.html
@@ -29,6 +29,11 @@
         <a href="../html/perfil.html" id="perfil">
             <img src="../assets/jawaperfil.png" alt="logo" width="100px">
         </a>
+        </div>
+        <br>
+
+        <nav id="navbarComponentes"></nav>
+
     </header>
     
     <h1 class=" texto text-center mb-3 ">COMPONENTES</h1>
