--- a/Desafio_Jawas/frontend/html/despieceLote.html
+++ b/Desafio_Jawas/frontend/html/despieceLote.html
@@ -27,6 +27,16 @@
         <a href="../html/perfil.html" id="perfil">
             <img src="../assets/perfil.png" alt="logo" width="35px">
         </a>
+
+        <nav>
+            <button>
+                <a href="despieceLote.html">Despiezar lote</a>
+            </button>
+
+            <button>
+                <a href="componentes.html"> Gestionar componentes</a>
+            </button>
+        </nav>
     </header>
 
     <h1> LOTES PARA CLASIFICAR </h1>
