--- a/Desafio_Jawas/frontend/html/gestionUsuarios.html
+++ b/Desafio_Jawas/frontend/html/gestionUsuarios.html
@@ -28,6 +28,20 @@
         <a href="../html/perfil.html" id="perfil">
             <img src="../assets/perfil.png" alt="logo" width="35px">
         </a>
+
+        <nav>
+            <button>
+                <a href="gestionUsuarios.html">Gestionar Usuarios</a>
+            </button>
+        
+            <button>
+                <a href="inventario.html"> Gestionar inventarios</a>
+            </button>
+
+            <button>
+                <a href="componentes.html"> Gestionar componentes</a>
+            </button>
+        </nav>
     </header>
 
     <h1>Usuarios activos en el sistema</h1>
