--- a/Desafio_Jawas/frontend/html/recetasDetalle.html
+++ b/Desafio_Jawas/frontend/html/recetasDetalle.html
@@ -28,6 +28,16 @@
         <a href="../html/perfil.html" id="perfil">
             <img src="../assets/perfil.png" alt="logo" width="35px">
         </a>
+
+        <nav>
+            <button>
+                <a href="joyas.html">Gestionar Joyas</a>
+            </button>
+
+            <button>
+                <a href="recetas.html"> Gestionar Recetas</a>
+            </button>
+        </nav>
     </header>
 
     <h1> RECETA NUEVA </h1>
