--- a/Desafio_Jawas/frontend/html/lotes.html
+++ b/Desafio_Jawas/frontend/html/lotes.html
@@ -15,7 +15,27 @@
     <!-- icon -->
     <link rel="icon" type="image/png" href="../assets/Imagen 1.png">
 
-    <title>Registro</title>
+    <title>Donar Lote</title>
+    <style>
+        #map {
+            width: 50vw;
+            height: 50vh;
+        }
+
+        .progress-container {
+            width: 50vw;
+            text-align: center;
+        }
+
+        .progress-bar {
+            width: 0%;
+            height: 30px;
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            line-height: 30px;
+        }
+    </style>
 </head>
 
 <body>
@@ -30,42 +50,36 @@
         </a>
     </header>
 
-    <h1>Registro</h1>
+    <div id="map">
+        <!-- Aquí va el mapa -->
+    </div>
 
-    <span id="msgExito"></span><br>
+    <button id="btnMandarLote">Mandar lote</button>
+    <span id="msgLote"></span>
 
-    <form id="formImagen" action="http://127.0.0.1:8000/api/subir" method="post" enctype="multipart/form-data">
-        Añadir imagen: <input name="image" type="file" accept="image/*" />
-        <input type="submit" name="subir" value="Subir imagen" />
-        <span id="msgErrorImagen"></span><br>
-    </form>
+    <h3>Entregándose...</h3>
+    <div class="progress-container">
+        <div class="progress-bar" id="myBar">0%</div>
+    </div>
 
-    <input type="text" id="nombreRegistro">
-    <label for="nombreRegistro">Nombre</label>
-    <span id="msgErrorNombre"></span><br>
+    <button id="btnCancelarLote">Cancelar lote</button>
 
-    <input type="text" id="apellidoRegistro">
-    <label for="apellidoRegistro">Apellido</label>
-    <span id="msgErrorApellido"></span><br>
+    <h2>LOTES DEL USUARIO</h2>
 
-    <input type="email" id="mailRegistro">
-    <label for="mailRegistro">Correo Electrónico</label>
-    <span id="msgErrorEmail"></span><br>
-
-    <input type="password" id="passwdRegistro">
-    <label for="passwdRegistro">Contraseña</label>
-    <span id="msgErrorPasswd"></span><br>
-
-    <input type="password" id="confPasswdRegistro">
-    <label for="confPasswdRegistro">Confirmar contraseña</label>
-    <span id="msgErrorConfPasswd"></span><br>
-
-    <input type="button" value="Registrarse" id="btnRegistro">
+    <div>
+        <input type="search" id="buscador" placeholder="Buscar lote">
+        <button id="btnBuscar">Buscar</button>
+        <span id="msgErrorBuscar"></span>
+    </div>
+    <table id="tablaLotes">
+        <!-- Aquí va la tabla de lotes -->
+    </table>
 
     <video autoplay muted loop id="myVideo">
         <source src="../assets/video.mp4" type="video/mp4">
     </video>
 
+    <!-- Pie de página -->
     <footer class="d-flex flex-column align-items-center p-3"
         style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0);">
         <div class="footer-contenido d-flex flex-column align-items-center justify-content-center">
@@ -87,6 +101,11 @@
         </div>
     </footer>
 </body>
-<script type="module" src="../js/registro.js"></script>
+<script src="../js/utils/google_maps.js"></script>
+<script type="module"
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSULpKCqFLZPFYrrwh9hGp-XOH1KtHneE&callback=initMap">
+    </script>
+<!-- <script type="module" src="../js/lotes.js"></script>-->
+<script type="module" src="../dist/lotes.js"></script>
 
 </html>
