Cambios en todos los HTMLs para añadir el webpack y añadido nuevo boton de la nueva pantalla de gestión de lotes

--- a/Desafio_Jawas/frontend/html/componentes.html
+++ b/Desafio_Jawas/frontend/html/componentes.html
@@ -97,6 +97,6 @@
     </footer>
 
 </body>
-<script type="module" src="../js/componentes.js"></script>
-
+<!-- <script type="module" src="../js/componentes.js"></script> -->
+<script type="module" src="../dist/componentes.js"></script>
 </html>
