--- a/Desafio_Jawas/frontend/html/despieceLote.html
+++ b/Desafio_Jawas/frontend/html/despieceLote.html
@@ -86,6 +86,6 @@
     </footer>
 
 </body>
-<script type="module" src="../js/despieceLote.js"></script>
-
+<!-- <script type="module" src="../js/despieceLote.js"></script> -->
+<script type="module" src="../dist/despieceLote.js"></script>
 </html>
