--- a/Desafio_Jawas/frontend/html/despieceLoteDetalles.html
+++ b/Desafio_Jawas/frontend/html/despieceLoteDetalles.html
@@ -101,6 +101,6 @@
     </footer>
 
 </body>
-<script type="module" src="../js/despieceLoteDetalles.js"></script>
-
+<!-- <script type="module" src="../js/despieceLoteDetalles.js"></script> -->
+<script type="module" src="../dist/despieceLoteDetalles.js"></script>
 </html>
