--- a/Desafio_Jawas/frontend/html/donacion.html
+++ b/Desafio_Jawas/frontend/html/donacion.html
@@ -98,6 +98,6 @@
 <script type="module"
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSULpKCqFLZPFYrrwh9hGp-XOH1KtHneE&callback=initMap">
     </script>
-<script type="module" src="../js/gestion_lotes.js"></script>
-
+<!-- <script type="module" src="../js/gestion_lotes.js"></script> -->
+<script type="module" src="../dist/donacion.js"></script>
 </html>
