--- a/Desafio_Jawas/frontend/html/gestionUsuarios.html
+++ b/Desafio_Jawas/frontend/html/gestionUsuarios.html
@@ -78,6 +78,6 @@
     </footer>
 
 </body>
-<script type="module" src="../js/gestionUsuarios.js"></script>
-
+<!-- <script type="module" src="../js/gestionUsuarios.js"></script> -->
+<script type="module" src="../dist/gestionUsuarios.js"></script>
 </html>
