--- a/Desafio_Jawas/frontend/html/home.html
+++ b/Desafio_Jawas/frontend/html/home.html
@@ -42,8 +42,12 @@
     </button>
 
     <!-- BOTONES DE COLABORADOR -->
+    <button id="btnLotes">
+        <a href="lotes.html">Gestión de Lotes</a>
+    </button>
+
     <button id="btnDonacion">
-        <a href="donacion.html">Donar un lote</a>
+        <a href="donacion.html">Donar un lote (Jaime)</a>
     </button>
 
     <!-- BOTONES DE CLASIFICADOR -->
@@ -92,6 +96,6 @@
     </footer>
 
 </body>
-<script type="module" src="../js/home.js"></script>
-
+<!-- <script type="module" src="../js/home.js"></script> -->
+<script type="module" src="../dist/home.js"></script>
 </html>
