--- a/Desafio_Jawas/frontend/html/inventario.html
+++ b/Desafio_Jawas/frontend/html/inventario.html
@@ -75,6 +75,6 @@
     </footer>
 
 </body>
-<script type="module" src="../js/inventario.js"></script>
-
+<!-- <script type="module" src="../js/inventario.js"></script> -->
+<script type="module" src="../dist/inventario.js"></script>
 </html>
