--- a/Desafio_Jawas/frontend/html/joyas.html
+++ b/Desafio_Jawas/frontend/html/joyas.html
@@ -89,6 +89,6 @@
     </footer>
 
 </body>
-<script type="module" src="../js/joyas.js"></script>
-
+<!-- <script type="module" src="../js/joyas.js"></script> -->
+<script type="module" src="../dist/joyas.js"></script>
 </html>
