--- a/Desafio_Jawas/frontend/html/joyasDetalle.html
+++ b/Desafio_Jawas/frontend/html/joyasDetalle.html
@@ -95,6 +95,6 @@
     </footer>
 
 </body>
-<script type="module" src="../js/joyasDetalle.js"></script>
-
+<!-- <script type="module" src="../js/joyasDetalle.js"></script> -->
+<script type="module" src="../dist/joyasDetalle.js"></script>
 </html>
