--- a/Desafio_Jawas/frontend/html/modificarCrearUsuario.html
+++ b/Desafio_Jawas/frontend/html/modificarCrearUsuario.html
@@ -93,8 +93,7 @@
         </div>
     </footer>
 </body>
-
-
-<script type="module" src="../js/modificarCrearUsuario.js"></script>
+<!-- <script type="module" src="../js/modificarCrearUsuario.js"></script> -->
+<script type="module" src="../dist/modificarCrearUsuario.js"></script>
 
 </html>
