--- a/Desafio_Jawas/frontend/html/preHome.html
+++ b/Desafio_Jawas/frontend/html/preHome.html
@@ -48,6 +48,6 @@
         </div>
     </footer>
 </body>
-<script type="module" src="../js/preHome.js"></script>
-
+<!-- <script type="module" src="../js/preHome.js"></script> -->
+<script type="module" src="../dist/preHome.js"></script>
 </html>
