--- a/Desafio_Jawas/frontend/html/recetas.html
+++ b/Desafio_Jawas/frontend/html/recetas.html
@@ -97,6 +97,6 @@
     </footer>
 
 </body>
-<script type="module" src="../js/recetas.js"></script>
-
+<!-- <script type="module" src="../js/recetas.js"></script> -->
+<script type="module" src="../dist/recetas.js"></script>
 </html>
