--- a/Desafio_Jawas/frontend/html/recetasDetalle.html
+++ b/Desafio_Jawas/frontend/html/recetasDetalle.html
@@ -103,6 +103,6 @@
     </footer>
 
 </body>
-<script type="module" src="../js/recetasDetalle.js"></script>
-
+<!-- <script type="module" src="../js/recetasDetalle.js"></script> -->
+<script type="module" src="../dist/recetasDetalles.js"></script>
 </html>
