--- a/Desafio_Jawas/frontend/html/index.html
+++ b/Desafio_Jawas/frontend/html/index.html
@@ -69,6 +69,6 @@
         </div>
     </footer>
 </body>
-<script type="module" src="../js/app.js"></script>
-
+<!-- <script type="module" src="../js/app.js"></script> -->
+<script type="module" src="../dist/main.js"></script>
 </html>
