--- a/Desafio_Jawas/frontend/html/login.html
+++ b/Desafio_Jawas/frontend/html/login.html
@@ -71,6 +71,6 @@
         </div>
     </footer>
 </body>
-<script type="module" src="../js/login.js"></script>
-
+<!-- <script type="module" src="../js/login.js"></script> -->
+<script type="module" src="../dist/login.js"></script>
 </html>
