--- a/Desafio_Jawas/frontend/html/perfil.html
+++ b/Desafio_Jawas/frontend/html/perfil.html
@@ -64,5 +64,6 @@
     </footer>
 
 </body>
-<script type="module" src="../js/perfil.js"></script>
+<!-- <script type="module" src="../js/perfil.js"></script> -->
+<script type="module" src="../dist/perfil.js"></script>
 </html>
