--- a/Desafio_Jawas/frontend/html/registro.html
+++ b/Desafio_Jawas/frontend/html/registro.html
@@ -87,6 +87,6 @@
         </div>
     </footer>
 </body>
-<script type="module" src="../js/registro.js"></script>
-
+<!-- <script type="module" src="../js/registro.js"></script> -->
+<script type="module" src="../dist/registro.js"></script>
 </html>
