--- a/Desafio_Jawas/frontend/html/index.html
+++ b/Desafio_Jawas/frontend/html/index.html
@@ -5,49 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- CSS -->
-    <link class="comun" rel="stylesheet" type="text/css" href="../css/comun.css">
-    <link rel="stylesheet" type="text/css" href="../css/tablasStyle.css">
-
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <!-- icon -->
     <link rel="icon" type="image/png" href="../assets/Imagen 1.png">
 
+    <!-- CSS -->
+    <link class="comun" rel="stylesheet" type="text/css" href="../css/comun.css">
+    <link rel="stylesheet" type="text/css" href="../css/tablasStyle.css">
+
     <title>Jawas Joyas</title>
 </head>
 
-<body>
-    <header class="d-flex flex-column align-items-center p-3 " style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0);">
+<body class="d-flex " style="min-height: 100vh;">
+    <header class="d-flex flex-column align-items-center p-3 " style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0); width: 100%;">
         <div class="header-contenido d-flex align-items-center justify-content-center">
             <img src="../assets/Imagen 1.png" alt="logo" width="110px">
             <h1 class="titulo">JAWAS GEMS</h1>
         </div>
     </header>
     
-    <div id="divPresentacion">
-        <div id="txtPresentacion" class="card" style="width: 18rem;">
-            <h2>Joyería CIFP Virgen de Gracia</h2>
-            <p>
-                Bienvenido a Jawas Joyas, una plataforma única donde transformamos hardware inutilizable y obsoleto en
+    <div id="divPresentacion" class="card m-5 p-1" style="width: 50rem;">
+        <div id="txtPresentacion" class="card-body p-4 mb-4">
+            <img src="../assets/b0014a0ded3f9d747c6f59e5fd8cc453.jpg" class="card-img mb-2">
+            <h2 class="card-title text-center">Joyería CIFP Virgen de Gracia</h2>
+            <p class="card-text" style="text-align: justify;">
+                Bienvenido a Jawas Gems, una plataforma única donde transformamos hardware inutilizable y obsoleto en
                 impresionantes piezas de joyería. </br>Nuestros productos son el resultado de la creatividad y la pasión
                 por dar una segunda vida a los elementos que de otra manera serían desechados.</br> Aquí, no solo puedes
                 explorar y adquirir nuestras innovadoras creaciones, sino que también puedes contribuir donando hardware
                 viejo.</br> Únete a nosotros en este emocionante viaje de reciclaje, creatividad y diseño.
             </p>
+            <input type="button" value="Participar" id="btnParticipar" class="btn btn-info btn-lg">
         </div>
 
-        <input type="button" value="Participar" id="btnParticipar" class="btn btn-info btn-lg">
+        
     </div>
 
     <video autoplay muted loop id="myVideo">
-        <source src="../assets/video.mp4" type="video/mp4">
+        <source src="../assets/f.mp4" type="video/mp4">
     </video>
 
     <!-- Pie de página -->
-    <footer class="d-flex flex-column align-items-center p-3"
-        style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0);">
+    <footer class="d-flex flex-column align-items-center p-3 mt-auto"
+        style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0); width: 100%;">
         <div class="footer-contenido d-flex flex-column align-items-center justify-content-center">
             <div class="redes-sociales mb-3 mt-3">
                 <p class="text-center mb-3">Puedes encontrarnos en:</p>
