--- a/Desafio_Jawas/frontend/html/componentes.html
+++ b/Desafio_Jawas/frontend/html/componentes.html
@@ -38,15 +38,14 @@
             </a>
         </div>
         <br>
-
-        <nav id="navbarComponentes"></nav>
-
     </header>
+
+    <nav id="navbarComponentes" class="mt-4 mb-4" style="display: flex; justify-content: center; justify-self: unset; margin-left: 350px; margin-right: 350px;"> </nav>
 
     <h1 class=" texto text-center mb-3 ">COMPONENTES</h1>
     <div class="text-center">
         <input type="search" id="buscador" placeholder="Buscar componente">
-        <button id="btnBuscar">Buscar</button>
+        <button class="btn btn-outline-primary mx-2" id="btnBuscar">Buscar</button>
         <span id="msgErrorBuscar"></span>
     </div>
     <div class="tabla-centro text-center mb-4 mt-4">
@@ -71,11 +70,11 @@
                     <ul>Si es componente, inserta un [1]</ul>
                     <ul>Si NO es componente, inserta un [0]</ul>
                     <label for="nombreComponente"></label>
-                    <input type="text" id="nombreComponente" placeholder="Nombre componente">
+                    <input type="text" id="nombreComponente" placeholder="Nombre componente"class="mb-3">
                     <span id="msgErrorNombre"></span>
                     <br>
                     <label for="esHardware"></label>
-                    <input type="text" id="hardware" placeholder="¿Es hardware?">
+                    <input type="text" id="hardware" placeholder="¿Es hardware?" class="mb-3">
                     <span id="msgErrorHardware"></span>
                     <span id="msgErrorComponente"></span>
                 </div>
