--- a/Desafio_Jawas/frontend/html/gestionUsuarios.html
+++ b/Desafio_Jawas/frontend/html/gestionUsuarios.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
@@ -38,34 +39,39 @@
             </a>
         </div>
         <br>
-
-        <nav id="navbarComponentes">
-            <button id= "btnUser">
-                <a href="gestionUsuarios.html">Gestionar Usuarios</a>
-            </button>
-        
-            <button id= "btnUser">
-                <a href="inventario.html"> Gestionar inventarios</a>
-            </button>
-
-            <button id= "btnUser">
-                <a href="componentes.html"> Gestionar componentes</a>
-            </button>
-        </nav>
     </header>
 
-    <h1 class=" texto text-center mb-3 ">USUARIOS ACTIVOS EN EL SISTEMA</h1>
+    <nav id="navbarComponentes" class="mt-4 mb-4" style="display: flex; justify-content: center; justify-self: unset; margin-left: 350px; margin-right: 350px;">
+        <button id="btnUser">
+            <a href="gestionUsuarios.html">Gestionar Usuarios</a>
+        </button>
 
-    <div class="tabla-centro-usuarios text-center ">
-        <table id="tablaUsuarios"></table>
+        <button id="btnUser">
+            <a href="inventario.html"> Gestionar inventarios</a>
+        </button>
+
+        <button id="btnUser">
+            <a href="componentes.html"> Gestionar componentes</a>
+        </button>
+    </nav>
+
+    <div class="container">
+        <h1 class=" texto text-center mt-3 mb-3 ">USUARIOS ACTIVOS EN EL SISTEMA</h1>
+
+        <div class=" tabla-centro-usuarios text-center">
+            <table class=" table " id="tablaUsuarios"></table>
+        </div>
+
+        <div class="d-flex justify-content-center">
+            <input type="button" class=" btn btn-outline-danger mb-3 mt-3 mx-2" id="btnBorrar" value="Borrar Usuario">
+            <input type="button" class="btn btn-outline-info mb-3 mt-3 mx-2" id="btnModificar"
+                value="Modificar Usuario">
+            <input type="button" class="btn btn-outline-success mb-3 mt-3 mx-2 " id="btnAgregar"
+                value="Agregar Usuario">
+        </div>
     </div>
-
-    <input type="button" id="btnBorrar" value="Borrar Usuario">
-    <input type="button" id="btnModificar" value="Modificar Usuario">
-    <input type="button" id="btnAgregar" value="Agregar Usuario">
-
     <video autoplay muted loop id="myVideo">
-        <source src="../assets/video.mp4" type="video/mp4">
+        <source src="../assets/videoFondo.mp4" type="video/mp4">
     </video>
 
     <!-- Pie de página -->
@@ -93,4 +99,5 @@
 </body>
 <!-- <script type="module" src="../js/gestionUsuarios.js"></script> -->
 <script type="module" src="../dist/gestionUsuarios.js"></script>
+
 </html>
