--- a/Desafio_Jawas/frontend/html/modificarCrearUsuario.html
+++ b/Desafio_Jawas/frontend/html/modificarCrearUsuario.html
@@ -5,39 +5,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <!-- CSS -->
     <link class="comun" rel="stylesheet" type="text/css" href="../css/comun.css">
-    <link rel="stylesheet" type="text/css" href="../css/tablasStyle.css">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
     <!-- icon -->
     <link rel="icon" type="image/png" href="../assets/Imagen 1.png">
-    
+
     <title>Modificar Usuario</title>
 </head>
 
 <body>
-    <header>
-        <a href="../html/home.html" id="inicio">
-            <img src="../assets/Imagen 1.png" alt="logo" width="40px">
-        </a>
-        <h1>JAWAS JOYAS</h1>
-        <a href="../html/perfil.html" id="perfil">
-            <img src="../assets/jawaperfil.png" alt="logo" width="35px">
-        </a>
+    <header class="d-flex flex-column align-items-center p-3 "
+        style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0);">
+        <div class="header-contenido d-flex align-items-center justify-content-center">
+            <a href="../html/home.html" id="inicio">
+                <img src="../assets/Imagen 1.png" alt="logo" width="110px">
+            </a>
+            <h1 class="titulo">JAWAS GEMS</h1>
+            <a href="../html/perfil.html" id="perfil">
+                <img src="../assets/jawaperfil.png" alt="logo" width="100px">
+            </a>
+        </div>
+        <br>
 
-        <nav>
-            <button>
+        <nav id="navbarComponentes">
+            <button id="btnUser">
                 <a href="gestionUsuarios.html">Gestionar Usuarios</a>
             </button>
-        
-            <button>
+
+            <button id="btnUser">
                 <a href="inventario.html"> Gestionar inventarios</a>
             </button>
 
-            <button>
+            <button id="btnUser">
                 <a href="componentes.html"> Gestionar componentes</a>
             </button>
         </nav>
