Inventario elimina correctamente filas de la tabla

--- a/Desafio_Jawas/frontend/html/inventario.html
+++ b/Desafio_Jawas/frontend/html/inventario.html
@@ -48,6 +48,8 @@
 
     <table id="tablaInventario"></table>
 
+    <input type="button" id="btnEliminarInventario" value="Eliminar">
+
     <video autoplay muted loop id="myVideo">
         <source src="../assets/video.mp4" type="video/mp4">
     </video>
