--- a/Desafio_Jawas/frontend/html/gestionUsuarios.html
+++ b/Desafio_Jawas/frontend/html/gestionUsuarios.html
@@ -36,12 +36,31 @@
             <h1 class="titulo">JAWAS GEMS</h1>
             <a href="../html/perfil.html" id="perfil">
                 <img src="../assets/jawaperfil.png" alt="logo" width="100px">
+                <li class="nav-item dropdown" style="  list-style-type: none;">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="../html/home.html">Home</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="../html/perfil.html">Perfil</a></li>
+                        <li><a class="dropdown-item" href="../html/preHome.html">Cambiar Rol</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="../html/">Cerrar Sesión</a></li>
+                    </ul>
+                </li>
             </a>
         </div>
         <br>
     </header>
 
-    <nav id="navbarComponentes" class="mt-4 mb-4" style="display: flex; justify-content: center; justify-self: unset; margin-left: 350px; margin-right: 350px;">
+    <nav id="navbarComponentes" class="mt-4 mb-4"
+        style="display: flex; justify-content: center; justify-self: unset; margin-left: 350px; margin-right: 350px;">
         <button id="btnUser">
             <a href="gestionUsuarios.html">Gestionar Usuarios</a>
         </button>
