--- a/Desafio_Jawas/frontend/html/componentes.html
+++ b/Desafio_Jawas/frontend/html/componentes.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
@@ -35,12 +36,32 @@
             <h1 class="titulo">JAWAS GEMS</h1>
             <a href="../html/perfil.html" id="perfil">
                 <img src="../assets/jawaperfil.png" alt="logo" width="100px">
+                <li class="nav-item dropdown" style="  list-style-type: none;">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="../html/home.html">Home</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="../html/perfil.html">Perfil</a></li>
+                        <li><a class="dropdown-item" href="../html/preHome.html">Cambiar Rol</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="../html/">Cerrar Sesión</a></li>
+                    </ul>
+                </li>
             </a>
         </div>
         <br>
     </header>
 
-    <nav id="navbarComponentes" class="mt-4 mb-4" style="display: flex; justify-content: center; justify-self: unset; margin-left: 350px; margin-right: 350px;"> </nav>
+    <nav id="navbarComponentes" class="mt-4 mb-4"
+        style="display: flex; justify-content: center; justify-self: unset; margin-left: 350px; margin-right: 350px;">
+    </nav>
 
     <h1 class=" texto text-center mb-3 ">COMPONENTES</h1>
     <div class="text-center">
@@ -53,7 +74,8 @@
     </div>
 
     <!-- Button trigger modal -->
-    <button id="btnModalComponentes" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <button id="btnModalComponentes" type="button" class="btn btn-primary" data-bs-toggle="modal"
+        data-bs-target="#exampleModal">
         Crear nuevo componente
     </button>
 
@@ -70,7 +92,7 @@
                     <ul>Si es componente, inserta un [1]</ul>
                     <ul>Si NO es componente, inserta un [0]</ul>
                     <label for="nombreComponente"></label>
-                    <input type="text" id="nombreComponente" placeholder="Nombre componente"class="mb-3">
+                    <input type="text" id="nombreComponente" placeholder="Nombre componente" class="mb-3">
                     <span id="msgErrorNombre"></span>
                     <br>
                     <label for="esHardware"></label>
