--- a/Desafio_Jawas/frontend/html/lotes.html
+++ b/Desafio_Jawas/frontend/html/lotes.html
@@ -5,12 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <!-- CSS -->
     <link class="comun" rel="stylesheet" type="text/css" href="../css/comun.css">
-    <link rel="stylesheet" type="text/css" href="../css/tablasStyle.css">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
     <!-- icon -->
     <link rel="icon" type="image/png" href="../assets/Imagen 1.png">
@@ -40,43 +47,71 @@
 
 <body>
 
-    <header>
-        <a href="../html/home.html" id="inicio">
-            <img src="../assets/Imagen 1.png" alt="logo" width="40px">
-        </a>
-        <h1>JAWAS JOYAS</h1>
-        <a href="../html/perfil.html" id="perfil">
-            <img src="../assets/jawaperfil.png" alt="logo" width="35px">
-        </a>
+    <header class="d-flex flex-column align-items-center p-3 "
+        style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0);">
+        <div class="header-contenido d-flex align-items-center justify-content-center">
+            <a href="../html/home.html" id="inicio">
+                <img src="../assets/Imagen 1.png" alt="logo" width="110px">
+            </a>
+            <h1 class="titulo">JAWAS GEMS</h1>
+            <a href="../html/perfil.html" id="perfil">
+                <img src="../assets/jawaperfil.png" alt="logo" width="100px">
+                <li class="nav-item dropdown" style="  list-style-type: none;">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="../html/home.html">Home</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="../html/perfil.html">Perfil</a></li>
+                        <li><a class="dropdown-item" href="../html/preHome.html">Cambiar Rol</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="../html/">Cerrar Sesión</a></li>
+                    </ul>
+                </li>
+            </a>
+        </div>
+        <br>
     </header>
 
-    <div id="map">
-        <!-- Aquí va el mapa -->
+    <h1 class=" texto text-center mb-3 ">MANDAR LOTES</h1>
+
+    <div class="container" style="margin-left: 370px;">
+
+        <div id="map" class="mb-3">
+            <!-- Aquí va el mapa -->
+        </div>
+
+        <button class="btn btn-success mb-3 mt-3" id="btnMandarLote" style="margin-left: 340px;">Mandar lote</button>
+        <span id="msgLote"></span>
+
+        <h3>Entregándose...</h3>
+        <div class="progress-container mb-3 mt-3"  >
+            <div class="progress-bar" id="myBar">0%</div>
+        </div>
+
+        <button class="btn btn-danger mb-3 mt-3" id="btnCancelarLote" style="margin-left: 340px;">Cancelar lote</button>
+
     </div>
 
-    <button id="btnMandarLote">Mandar lote</button>
-    <span id="msgLote"></span>
+    <h1 class=" texto text-center mb-3 ">LOTES DEL USUARIO</h1>
 
-    <h3>Entregándose...</h3>
-    <div class="progress-container">
-        <div class="progress-bar" id="myBar">0%</div>
-    </div>
-
-    <button id="btnCancelarLote">Cancelar lote</button>
-
-    <h2>LOTES DEL USUARIO</h2>
-
-    <div>
-        <input type="search" id="buscador" placeholder="Buscar lote">
-        <button id="btnBuscar">Buscar</button>
+    <div class="text-center">
+        <input type="search" id="buscador" placeholder="Buscar Lote">
+        <button class="btn btn-outline-primary mx-2" id="btnBuscar">Buscar</button>
         <span id="msgErrorBuscar"></span>
     </div>
-    <table id="tablaLotes">
-        <!-- Aquí va la tabla de lotes -->
-    </table>
+
+    <div class=" tabla-centro-lotes text-center mb-4 mt-4">
+        <table class="text-center" id="tablaLotes"></table>
+    </div>
 
     <video autoplay muted loop id="myVideo">
-        <source src="../assets/video.mp4" type="video/mp4">
+        <source src="../assets/videoFondo.mp4" type="video/mp4">
     </video>
 
     <!-- Pie de página -->
