--- a/Desafio_Jawas/frontend/html/lotes.html
+++ b/Desafio_Jawas/frontend/html/lotes.html
@@ -87,11 +87,13 @@
         </div>
 
         <button class="btn btn-success mb-3 mt-3" id="btnMandarLote" style="margin-left: 340px;">Mandar lote</button>
-        <span id="msgLote"></span>
 
-        <h3>Entregándose...</h3>
+
+        <h3 style="color: aliceblue;">Entregándose...</h3>
         <div class="progress-container mb-3 mt-3"  >
             <div class="progress-bar" id="myBar">0%</div>
+        </br>
+        <span id="msgLote"></span>
         </div>
 
         <button class="btn btn-danger mb-3 mt-3" id="btnCancelarLote" style="margin-left: 340px;">Cancelar lote</button>
