--- a/Desafio_Jawas/frontend/html/componentes.html
+++ b/Desafio_Jawas/frontend/html/componentes.html
@@ -34,7 +34,7 @@
                 <img src="../assets/Imagen 1.png" alt="logo" width="110px">
             </a>
             <h1 class="titulo">JAWAS GEMS</h1>
-            <a href="../html/perfil.html" id="perfil">
+            <a href="#" id="perfil">
                 <img src="../assets/jawaperfil.png" alt="logo" width="100px">
                 <li class="nav-item dropdown" style="  list-style-type: none;">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
