--- a/Desafio_Jawas/frontend/html/perfil.html
+++ b/Desafio_Jawas/frontend/html/perfil.html
@@ -17,20 +17,35 @@
     <title>Perfil</title>
 </head>
 <body>
-    <header class="d-flex flex-column align-items-center p-3 " style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0);">
+    <header class="d-flex flex-column align-items-center p-3 "
+        style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0);">
         <div class="header-contenido d-flex align-items-center justify-content-center">
-        <a href="../html/home.html" id="inicio">
-            <img src="../assets/Imagen 1.png" alt="logo" width="110px">
-        </a>
-        <h1 class="titulo">JAWAS GEMS</h1>
-        <a href="../html/perfil.html" id="perfil">
-            <img src="../assets/jawaperfil.png" alt="logo" width="100px">
-        </a>
+            <a href="../html/home.html" id="inicio">
+                <img src="../assets/Imagen 1.png" alt="logo" width="110px">
+            </a>
+            <h1 class="titulo">JAWAS GEMS</h1>
+            <a href="" id="perfil">
+                <img src="../assets/jawaperfil.png" alt="logo" width="100px">
+                <li class="nav-item dropdown" style="  list-style-type: none;">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="../html/home.html">Home</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="../html/perfil.html">Perfil</a></li>
+                        <li><a class="dropdown-item" href="../html/preHome.html">Cambiar Rol</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="../html/">Cerrar Sesión</a></li>
+                    </ul>
+                </li>
+            </a>
         </div>
         <br>
-
-        <nav id="navbarComponentes"></nav>
-
     </header>
 
     <div class="m-5 p-5" style="background-color: rgba(220, 255, 132, 0.855); border-radius: 10px;">
@@ -94,7 +109,7 @@
     </div>
     
     <video autoplay muted loop id="myVideo">
-        <source src="../assets/f.mp4" type="video/mp4">
+        <source src="../assets/videoFondo.mp4" type="video/mp4">
     </video>
 
     <!-- Pie de página -->
