--- a/Desafio_Jawas/frontend/html/inventario.html
+++ b/Desafio_Jawas/frontend/html/inventario.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"  content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -73,15 +73,18 @@
             <a href="componentes.html"> Gestionar componentes</a>
         </button>
     </nav>
-    <h1>INVENTARIO</h1>
-    <h3>Selecciona un componente de la lista, después añade o elimina componentes</h3>
 
-    <table id="tablaInventario"></table>
+    <h1 class=" texto text-center mb-3 ">INVENTARIO</h1>
+    <h3 class="text-center mb-3" style="color: aliceblue; font-size: 22px;">Selecciona un componente de la lista,
+        después añade o elimina componentes</h3>
 
-    <input type="button" id="btnEliminarInventario" value="Eliminar">
-
+    <div class=" tabla-centro-inventario text-center mb-4 mt-4">
+        <table class="text-center" id="tablaInventario"></table>
+    </div>
+    <input type="button" class="btn btn-danger mb-4 mt-3" id="btnEliminarInventario" value="Eliminar Componente"  style="margin-left: 700px;">
+    <div class="mt-3"></div>
     <video autoplay muted loop id="myVideo">
-        <source src="../assets/video.mp4" type="video/mp4">
+        <source src="../assets/videoFondo.mp4" type="video/mp4">
     </video>
 
     <!-- Pie de página -->
@@ -109,4 +112,5 @@
 </body>
 <!-- <script type="module" src="../js/inventario.js"></script> -->
 <script type="module" src="../dist/inventario.js"></script>
+
 </html>
