--- a/Desafio_Jawas/frontend/html/home.html
+++ b/Desafio_Jawas/frontend/html/home.html
@@ -5,12 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <!-- CSS -->
     <link class="comun" rel="stylesheet" type="text/css" href="../css/comun.css">
-    <link rel="stylesheet" type="text/css" href="../css/tablasStyle.css">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
     <!-- icon -->
     <link rel="icon" type="image/png" href="../assets/Imagen 1.png">
@@ -18,73 +25,74 @@
     <title>Inicio</title>
 </head>
 
-<body>
+<body class="d-flex flex-column" style="min-height: 100vh;">
 
-    <header>
-        <a href="../html/home.html" id="inicio">
-            <img src="../assets/Jawas.webp" alt="logo" width="40px">
-        </a>
-        <h1>JAWAS JOYAS</h1>
-        <a href="../html/perfil.html" id="perfil">
-            <img src="../assets/perfil.png" alt="logo" width="35px">
-        </a>
+    <header class="p-3 col-5" style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0);">
+        <div class="d-flex align-items-center">
+            <img src="../assets/Imagen 1.png" alt="logo" width="110px">
+            <h1 class="titulo" style="white-space: nowrap; margin-left: 4vw;">JAWAS GEMS</h1>
+        </div>
     </header>
 
-    <h1>Bienvenido, elige con que función trabajar</h1>
+    <div class="col-5 ps-5 pe-5 text-center" style="background-color: rgba(220, 255, 132, 0.855);">
+        <h2>Bienvenido, elige con que función trabajar</h2>
 
-    <!-- BOTONES DE ADMINISTRADOR -->
-    <button id="btnGestUsuarios">
-        <a href="gestionUsuarios.html">Gestionar Usuarios</a>
-    </button>
+        <!-- BOTONES DE ADMINISTRADOR -->
+        <button id="btnGestUsuarios"  class="btn btn-primary btn-lg mb-3 mt-3">
+            <a href="gestionUsuarios.html" style="color: white;">Gestionar Usuarios</a>
+        </button><br>
 
-    <button id="btnGestInventario">
-        <a href="inventario.html"> Gestionar inventarios</a>
-    </button>
+        <button id="btnGestInventario"  class="btn btn-primary btn-lg mb-3 mt-3">
+            <a href="inventario.html" style="color: white;"> Gestionar inventarios</a>
+        </button><br>
 
-    <!-- BOTONES DE COLABORADOR -->
-    <button id="btnLotes">
-        <a href="lotes.html">Gestión de Lotes</a>
-    </button>
+        <!-- BOTONES DE ADMINISTRADOR Y CLASIFICADOR -->
+        <button id="btnGestComponentes"  class="btn btn-primary btn-lg mb-3 mt-3">
+            <a href="componentes.html" style="color: white;"> Gestionar componentes</a>
+        </button><br>
 
-    <button id="btnDonacion">
-        <a href="donacion.html">Donar un lote (Jaime)</a>
-    </button>
+        <!-- BOTONES DE CLASIFICADOR -->
+        <button id="btnDespieceLote"  class="btn btn-primary btn-lg mb-3 mt-3">
+            <a href="despieceLote.html" style="color: white;">Despiezar lote</a>
+        </button><br>
 
-    <!-- BOTONES DE CLASIFICADOR -->
-    <button id="btnDespieceLote">
-        <a href="despieceLote.html">Despiezar lote</a>
-    </button>
+        <!-- BOTONES DE COLABORADOR -->
+        <button id="btnLotes"  class="btn btn-primary btn-lg mb-3 mt-3">
+            <a href="lotes.html" style="color: white;">Gestión de Lotes</a>
+        </button><br>
 
-    <!-- BOTONES DE DISEÑADOR -->
-    <button id="btnGestJoyas">
-        <a href="joyas.html">Gestionar Joyas</a>
-    </button>
+        <button id="btnDonacion"  class="btn btn-primary btn-lg mb-3 mt-3">
+            <a href="donacion.html" style="color: white;">Donar un lote (Jaime)</a>
+        </button><br>
 
-    <button id="btnGestRecetas">
-        <a href="recetas.html">Gestionar Recetas</a>
-    </button>
+        <!-- BOTONES DE DISEÑADOR -->
+        <button id="btnGestJoyas"  class="btn btn-primary btn-lg mb-3 mt-3">
+            <a href="joyas.html" style="color: white;">Gestionar Joyas</a>
+        </button><br>
 
-    <!-- BOTONES DE ADMINISTRADOR Y CLASIFICADOR -->
-    <button id="btnGestComponentes">
-        <a href="componentes.html"> Gestionar componentes</a>
-    </button>
+        <button id="btnGestRecetas"  class="btn btn-primary btn-lg mb-3 mt-3">
+            <a href="recetas.html" style="color: white;">Gestionar Recetas</a>
+        </button><br>
+
+        
+
+    </div>
 
     <video autoplay muted loop id="myVideo">
-        <source src="../assets/video.mp4" type="video/mp4">
+        <source src="../assets/videoFondo.mp4 " type="video/mp4">
     </video>
 
     <!-- Pie de página -->
-    <footer class="d-flex flex-column align-items-center p-3"
-        style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0);">
+    <footer class="p-3 col-5" style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0);">
         <div class="footer-contenido d-flex flex-column align-items-center justify-content-center">
             <div class="redes-sociales mb-3 mt-3">
                 <p class="text-center mb-3">Puedes encontrarnos en:</p>
-                <a href="https://www.instagram.com/" target="_blank" class="mr-4"><img
-                        src="../assets/icono_instagram.webp" alt="Instagram" height="68px"></a>
-                <a href="https://twitter.com/?lang=es " target="_blank" class="mr-4"><img
-                        src="../assets/icono_twitter.png" alt="Twitter" height="55px"></a>
-                <a href="https://www.facebook.com/?locale=es_ES" target="_blank" class="mr-4"><img
-                        src="../assets/icono_facebook.png" alt="Facebook" height="55px"></a>
+                <a href="https://www.instagram.com/" target="_blank" class="mr-4"><img src="../assets/icono_instagram.webp"
+                        alt="Instagram" height="68px"></a>
+                <a href="https://twitter.com/?lang=es " target="_blank" class="mr-4"><img src="../assets/icono_twitter.png"
+                        alt="Twitter" height="55px"></a>
+                <a href="https://www.facebook.com/?locale=es_ES" target="_blank" class="mr-4" ><img src="../assets/icono_facebook.png"
+                        alt="Facebook" height="55px"></a>
             </div>
             <div class="politica-privacidad mb-3">
                 <a href="politica-de-privacidad.html">Política de Privacidad</a>
