--- a/Desafio_Jawas/frontend/html/recetas.html
+++ b/Desafio_Jawas/frontend/html/recetas.html
@@ -74,11 +74,11 @@
         <span id="msgErrorBuscar"></span>
     </div>
 
-    <div class="tabla-centro text-center mb-4 mt-4">
+    <div class="tabla-centro-recetas text-center mb-4 mt-4">
         <table id="tablaRecetas" class="text-center"></table>
     </div>
 
-    <div class="tabla-centro text-center mb-4 mt-4">
+    <div class="tabla-centro-recetas text-center mb-4 mt-4">
         <table id="tablaIngredientes" class="text-center"></table>
     </div>
 
