ARREGLOS A CAUSA DE UN CONFLICTO NO RESUELTO

--- a/Desafio_Jawas/frontend/html/lotes.html
+++ b/Desafio_Jawas/frontend/html/lotes.html
@@ -78,7 +78,7 @@
 
     <div class="container">
 
-        <div id="btnMandarLote" style="align-items: center; justify-content: center; padding-left: 220px;" >
+        <div id="mapa" style="align-items: center; justify-content: center; padding-left: 220px;" >
             <div id="map" class="mb-3">
                 <!-- Aquí va el mapa -->
             </div>
